@@ -1,3 +1,5 @@
+- Bug fix: RAIDES: Set country of high school [#qubIT-Fenix-4938]
+
 2.16.3 (30-01-2024)
 - Bug fix: Mark as excluded all blocks with errors [#qubIT-Fenix-4917]
 
